[package]
name = "rato"
version = "0.1.0"
authors = ["Rohit Joshi <rohit.c.joshi@gmail.com>"]
edition = "2018"
description = "Redis protocol parsing library"
keywords=["redis", "protocol"]
License="Apache 2.0"
license-file="LICENSE"

[badges]
travis-ci = { repository = "https://github.com/rohitjoshi/rato", branch = "master" }
codecov = { repository = "https://github.com/rohitjoshi/rato", branch = "master", service = "github" }

[dependencies]
log = "0.4.6"
hashbrown = "0.1.8"

[dev-dependencies]
env_logger = { version = "0.6.0", default-features = false }