[package]
name = "rato"
version = "0.1.2"
authors = ["Rohit Joshi <rohit.c.joshi@gmail.com>"]
edition = "2018"
description = "Redis protocol parsing library"
keywords=["redis", "protocol"]
License="Apache 2.0"
license-file="LICENSE"
publish = true

[badges]
travis-ci = { repository = "https://github.com/rohitjoshi/rato", branch = "master" }
codecov = { repository = "https://github.com/rohitjoshi/rato", branch = "master", service = "github" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false

[dependencies]
log = { version = "0.3", features = ["max_level_trace", "release_max_level_info"] }
hashbrown = "0.1.8"
rayon="1.0.3"

